# rust-sped

./: .gitignore  Cargo.toml  LICENSE  README.md  arquivo_novo.txt  git-cleanup.sh  test  update_completions.sh
benches/: binary_search.rs  fields_format.rs  group_by.rs  remove_white_space.rs  select_first_digits.rs  split_lines.rs
completions/: completion_derive.bash  completion_derive.elvish  completion_derive.fish  completion_derive.powershell  completion_derive.zsh
examples/: efd_data_random  run.rs  substituir_informacoes_confidenciais_da_sped_efd.py
src/: analyse_one_new.rs  analyze_all.rs  analyze_one.rs  analyze_one_new.rs  args.rs  config.rs  dispatch_table.rs  enumeratons  enumeratons.rs  error.rs  excel_alternative.rs  excel_comum.rs  excel_format.rs  excel_sheet_type.rs  excel_workbook.rs  excel_worksheets.rs  extractor.rs  hashmap  hashmap.rs  lib.rs  line_iterator.rs  macros.rs  main.rs  model.rs  mylib.rs  ownership  ownership.rs  parser.rs  pattern_adapter.rs  referencias  referencias.rs  regex.rs  sped_efd.rs  sped_registros.rs  tabelas.rs  traits.rs  tree  tree.rs  utils.rs  validate_line.rs
src/blocos/: mod.rs
src/blocos/bloco_0/: mod.rs  registro_0000.rs  registro_0001.rs  registro_0035.rs  registro_0100.rs  registro_0110.rs  registro_0111.rs  registro_0120.rs  registro_0140.rs  registro_0145.rs  registro_0150.rs  registro_0190.rs  registro_0200.rs  registro_0205.rs  registro_0206.rs  registro_0208.rs  registro_0400.rs  registro_0450.rs  registro_0500.rs  registro_0600.rs  registro_0900.rs  registro_0990.rs
src/blocos/bloco_1/: mod.rs  registro_1001.rs  registro_1010.rs  registro_1011.rs  registro_1020.rs  registro_1050.rs  registro_1100.rs  registro_1101.rs  registro_1102.rs  registro_1200.rs  registro_1210.rs  registro_1220.rs  registro_1300.rs  registro_1500.rs  registro_1501.rs  registro_1502.rs  registro_1600.rs  registro_1610.rs  registro_1620.rs  registro_1700.rs  registro_1800.rs  registro_1809.rs  registro_1900.rs  registro_1990.rs
src/blocos/bloco_9/: mod.rs  registro_9001.rs  registro_9900.rs  registro_9990.rs  registro_9999.rs
src/blocos/bloco_a/: mod.rs  registro_a001.rs  registro_a010.rs  registro_a100.rs  registro_a110.rs  registro_a111.rs  registro_a120.rs  registro_a170.rs  registro_a990.rs
src/blocos/bloco_c/: mod.rs  registro_c001.rs  registro_c010.rs  registro_c100.rs  registro_c110.rs  registro_c111.rs  registro_c120.rs  registro_c170.rs  registro_c175.rs  registro_c180.rs  registro_c181.rs  registro_c185.rs  registro_c188.rs  registro_c190.rs  registro_c191.rs  registro_c195.rs  registro_c198.rs  registro_c199.rs  registro_c380.rs  registro_c381.rs  registro_c385.rs  registro_c395.rs  registro_c396.rs  registro_c400.rs  registro_c405.rs  registro_c481.rs  registro_c485.rs  registro_c489.rs  registro_c490.rs  registro_c491.rs  registro_c495.rs  registro_c499.rs  registro_c500.rs  registro_c501.rs  registro_c505.rs  registro_c509.rs  registro_c600.rs  registro_c601.rs  registro_c605.rs  registro_c609.rs  (+9 more)
src/blocos/bloco_d/: mod.rs  registro_d001.rs  registro_d010.rs  registro_d100.rs  registro_d101.rs  registro_d105.rs  registro_d111.rs  registro_d200.rs  registro_d201.rs  registro_d205.rs  registro_d209.rs  registro_d300.rs  registro_d309.rs  registro_d350.rs  registro_d359.rs  registro_d500.rs  registro_d501.rs  registro_d505.rs  registro_d509.rs  registro_d600.rs  registro_d601.rs  registro_d605.rs  registro_d609.rs  registro_d990.rs
src/blocos/bloco_f/: mod.rs  registro_f001.rs  registro_f010.rs  registro_f100.rs  registro_f111.rs  registro_f120.rs  registro_f129.rs  registro_f130.rs  registro_f139.rs  registro_f150.rs  registro_f200.rs  registro_f205.rs  registro_f210.rs  registro_f211.rs  registro_f500.rs  registro_f509.rs  registro_f510.rs  registro_f519.rs  registro_f525.rs  registro_f550.rs  registro_f559.rs  registro_f560.rs  registro_f569.rs  registro_f600.rs  registro_f700.rs  registro_f800.rs  registro_f990.rs
src/blocos/bloco_i/: mod.rs  registro_i001.rs  registro_i010.rs  registro_i100.rs  registro_i199.rs  registro_i200.rs  registro_i299.rs  registro_i300.rs  registro_i399.rs  registro_i990.rs
src/blocos/bloco_m/: mod.rs  registro_m001.rs  registro_m100.rs  registro_m105.rs  registro_m110.rs  registro_m115.rs  registro_m200.rs  registro_m205.rs  registro_m210.rs  registro_m210_antigo.rs  registro_m211.rs  registro_m215.rs  registro_m220.rs  registro_m225.rs  registro_m230.rs  registro_m300.rs  registro_m350.rs  registro_m400.rs  registro_m410.rs  registro_m500.rs  registro_m505.rs  registro_m510.rs  registro_m515.rs  registro_m600.rs  registro_m605.rs  registro_m610.rs  registro_m610_antigo.rs  registro_m611.rs  registro_m615.rs  registro_m620.rs  registro_m625.rs  registro_m630.rs  registro_m700.rs  registro_m800.rs  registro_m810.rs  registro_m990.rs
src/blocos/bloco_p/: mod.rs  registro_p001.rs  registro_p010.rs  registro_p100.rs  registro_p110.rs  registro_p199.rs  registro_p200.rs  registro_p210.rs  registro_p990.rs
src/structures/: analise_dos_creditos.rs  consolidacao_cst.rs  docs_fiscais.rs  docs_fiscais_new.rs  info.rs  info_new.rs  informacoes.rs  mod.rs  receita_bruta_segregada.rs  sped_context.rs  traits.rs
src/tests/: analise_dos_creditos_tests.rs  analyze_one_new_tests.rs  analyze_one_tests.rs  extractor_tests.rs  info_new_tests.rs  mod.rs  parser_tests.rs  pattern_adapter.rs  traits_tests.rs
